# TP_Final_Idrone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: DroneIBag151_UML.drawio  DroneIBag151_UML_FINAL.drawio  REGLAS_NEGOCIO.md  WINDOWS_SUPPORT.md
include/application/: DroneController.hpp
include/domain/: Drone.hpp
include/infrastructure/: IDroneAPI.hpp  MockDroneAPI.hpp
include/presentation/: ConsoleUI.hpp
src/application/: DroneController.cpp
src/domain/: Drone.cpp
src/infrastructure/: MockDroneAPI.cpp
src/presentation/: ConsoleUI.cpp
